-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
Qt Creator 3.2.0-beta1
-
Windows 8.1 Enterprise
When I try to edit a qml file and puppet cannot be found I get a dialog that uses incorrect grammar:
---------------------------
Emulation layer building was unsuccessful
---------------------------
The emulation layer(Qml Puppet) cannot was built. So now the fallback version will be used which is not supporting all features.
---------------------------
OK
---------------------------
For Gerrit Dashboard: QTCREATORBUG-12562 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
88708,7 | QmlDesigner: Fix spelling in PuppetCreator::build | 3.2 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |