QmlDesigner: Fix spelling in PuppetCreator::build

Task-number: QTCREATORBUG-12562
Change-Id: If14869b085c2f5bd59ea827b4e9e31db210592af
Reviewed-by: Oliver Wolff <oliver.wolff@digia.com>
Reviewed-by: Leena Miettinen <riitta-leena.miettinen@digia.com>